--- a/templates/morning.html
+++ b/templates/morning.html
@@ -7,7 +7,7 @@
 <!-- FontAwesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <!-- Custom CSS -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/morning-style.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/morning.css') }}">
 
 <div class="glass-container fade-in-up mb-5">
 
@@ -152,3 +152,4 @@
 </script>
 <script src="{{ url_for('static', filename='js/morning.js') }}"></script>
 {% endblock %}
+
