--- a/templates/evening.html
+++ b/templates/evening.html
@@ -7,7 +7,7 @@
 <!-- FontAwesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <!-- Custom CSS (Shared) -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/morning-style.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/morning.css') }}">
 
 <div class="glass-container fade-in-up mb-5">
 
@@ -324,3 +324,4 @@
     });
 </script>
 {% endblock %}
+
