--- a/templates/admin/edit_evening_settle.html
+++ b/templates/admin/edit_evening_settle.html
@@ -4,7 +4,7 @@
 <div class="container-fluid fade-in-up py-4">
     
     <div class="d-flex align-items-center mb-4">
-        <a href="{{ url_for('evening_master') }}" class="btn btn-light border rounded-circle me-3 shadow-sm">
+        <a href="{{ url_for('admin_evening_master') }}" class="btn btn-light border rounded-circle me-3 shadow-sm">
             <i class="fa-solid fa-arrow-left"></i>
         </a>
         <div>
